<resources>
    <string name="app_name">Tip Calculator!</string>
    <string name="cost_of_service">Enter cost of service...</string>
    <string name="how_was_service">How was the service?</string>
    <string name="amazing_service">Amazing! 🤩 (20%)</string>
    <string name="good_service">Great! 😄 (18%)</string>
    <string name="ok_service">Okay! 🙂 (15%)</string>
    <string name="meh_service">Meh. 😐 (10%)</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="calculate">Calculate! 📝</string>
    <string name="tip_amount">Tip Amount</string>
</resources>