<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".MainActivity">

        <ImageView
                android:id="@+id/icon_cost_of_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAcessiblity="no"
                app:srcCompat="@drawable/ic_store"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/service_cost"
                app:layout_constraintBottom_toBottomOf="@id/service_cost" />

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/service_cost"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:hint="@string/cost_of_service"
                android:layout_margin="16dp"
                app:layout_constraintStart_toEndOf="@id/icon_cost_of_service"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/cost_of_service_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
                android:id="@+id/service_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_was_service"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/service_cost" />

        <RadioGroup
                android:id="@+id/tip_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:checkedButton="@id/option_twenty"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/service_question">
                <RadioButton
                        android:id="@+id/option_twenty"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/amazing_service" />
                <RadioButton
                        android:id="@+id/option_eighteen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/good_service" />
                <RadioButton
                        android:id="@+id/option_fifteen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ok_service" />
                <RadioButton
                        android:id="@+id/option_ten"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/meh_service" />
        </RadioGroup>

        <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/round_up_switch"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:checked="true"
                android:text="@string/round_up_tip"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tip_options" />

        <Button
                android:id="@+id/calculate_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/calculate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/round_up_switch" />

        <TextView
                android:id="@+id/tip_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/calculate_button"
                android:text="@string/tip_amount" />

</androidx.constraintlayout.widget.ConstraintLayout>